# llamacpp-tests

./: requirements.txt
llamacpp/: README.md  main.py  pyproject.toml
ollama-client/: README.md  main.py  pyproject.toml
ollama-server/: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
